force-app/main/default/objects/Product2/fields/Contact_Phone_Number__c.field-meta.xml
<CustomField>
    <fullName>Contact_Phone_Number__c</fullName>
    <label>Contact Phone Number</label>
    <type>Phone</type>
</CustomField>