force-app/main/default/objects/Product2/fields/Venue__c.field-meta.xml
<CustomField>
    <fullName>Venue__c</fullName>
    <label>Venue</label>
    <length>30</length>
    <type>Text</type>
</CustomField>